# game_server

./: .gitignore  .gitmodules  README.md  cpp命名规范.txt
server/: .gitmodules  CMakeLists.txt  rebuild_all.sh  rebuild_center.sh  rebuild_common.sh  rebuild_dbagent.sh  rebuild_frame.sh  rebuild_game.sh  rebuild_gate.sh  rebuild_lobby.sh  rebuild_pb.sh
server/cmake_config/: config.cmake  config_lib.cmake
server/dbmsql/: all.sql  chess_sysdata.sql
server/network/src/network/: Acceptor.cpp  Double_List_T.h  IOCPServer.cpp  IoHandler.cpp  Session.h  Single_List_T.h  tcp_connector.cpp
server/release/: buildbag.sh  checkrun_allserver.sh  config.sh  reload_all.sh  restart_all.sh  stop_all.sh
server/release/bag_pkg/: copy_server.sh  install_pkg.sh  scp_server.sh
server/release/center_server/: checkrun_server.sh  reload.sh  restart_game.sh  stop.sh
server/release/dbagent_server/: checkrun_server.sh  reload.sh  restart_game.sh  stop.sh
server/release/game_server/: checkrun_server.sh  reload.sh  restart_game.sh  stop.sh
server/release/game_server/lua/: player_handle.lua
server/release/gate_server/: checkrun_server.sh  reload.sh  restart_game.sh  stop.sh
server/release/lobby_server/: checkrun_server.sh  reload.sh  restart_game.sh  stop.sh
server/release/lobby_server/lua/: main.lua  player_handle.lua
server/release/lobby_server/scp/: player_births.txt  player_levels.txt
server/release/lobby_server/scp_lua/: roles.lua
server/release/server_config/: server_config.lua
server/release/server_config/lua/: common_define.lua  main.lua  player_handle.lua
server/release/server_config/scp/: role_levels.txt
server/release/server_config/scp_lua/: copy_infos.lua  player_births.lua  player_levels.lua  role_levels.lua
server/server_frame/: .gitignore  CMakeLists.txt  README.md
server/server_frame/depend/: cmake-3.15.0-rc4.tar.gz.qbl  install_env.sh  start_proxy.sh
server/server_frame/depend/redis/: redis_1.conf  redis_2.conf  start.sh
server/server_frame/include/: svrlib.h
server/server_frame/include/aoi/: scene.h
server/server_frame/include/asio_network/: message.hpp  moon_connection.hpp  tcp.h
server/server_frame/include/astar/: blockallocator.h
server/server_frame/include/config/: config.h
server/server_frame/include/crypt/: crypt.h  sha1.hpp
server/server_frame/include/dbmysql/: db_task.h  db_wrap.h  dbmysql.h
server/server_frame/include/ebus/: event.hpp  event_bus.hpp  event_handler.hpp  frame_event.hpp  handler_registration.hpp  object.hpp
server/server_frame/include/framework/: application.h
server/server_frame/include/fundamental/: cyclebuffer.h  cyclebuffer_shm.h  multiprocesshashtable.h  noncopyable.h  variablehashtable.h  variablelengthhashtable.h
server/server_frame/include/helper/: filehelper.h  helper.h  numberStream.h
server/server_frame/include/lua_service/: lua_bind.h  lua_service.h
server/server_frame/include/math/: math_functions.h  rand_table.h
server/server_frame/include/memory/: shm_buff_queue.h  shm_cache_mgr.h
server/server_frame/include/modern/: httplib.h  read_write_lock.h  rwlock.hpp  spinlock.hpp  thread_pool.h
server/server_frame/include/network/: IOCPServer.h  NetworkObject.h  message_head.h  tcp_callbacks.h  tcp_conn.h  tcp_connector.h  tcp_server.h  ws_client.h
server/server_frame/include/network_asio/: base_connection.hpp  byte_buffer.h  config.h  const_buffers_holder.hpp  custom_connection.hpp  handler_alloc.hpp  message_head.h  tcp_callbacks.h  tcp_client.h  tcp_conn.h  tcp_server.h  ws_connection.hpp
server/server_frame/include/packet/: inner_protobuf_pkg.h  protobuf_handle.h  protobuf_pkg.h
server/server_frame/include/redis/: redisclient.h
server/server_frame/include/redisclient/: redisasyncclient.h  redisbuffer.h  redissyncclient.h
server/server_frame/include/string/: string.hpp  stringutility.h
server/server_frame/include/thread/: rwlock.hpp  spinlock.hpp
server/server_frame/include/time/: time.hpp  time_function.h
server/server_frame/include/utility/: basic_types.h  comm_macro.h  cooling.h  event_processor.h  hash.hpp  object_pool.hpp  profile_manager.h  puid.hpp  shm_cache_mgr.h  singleton.h  timeutility.h
server/server_frame/src/config/: config.cpp
server/server_frame/src/crypt/: crypt.cpp  md5.cpp
server/server_frame/src/dbmysql/: db_task.cpp  dbmysql_exception.cpp
server/server_frame/src/framework/: framework.cpp  framework.h  frameworkmain.cpp
server/server_frame/src/helper/: bufferStream.cpp  filehelper.cpp  helper.cpp  stringStream.cpp
server/server_frame/src/lua_service/: lua_bind.cpp  lua_service.cpp
server/server_frame/src/math/: rand_table.cpp
server/server_frame/src/memory/: shm_buff_queue.cpp
server/server_frame/src/modern/: json_wrap.cpp  tinyxml2.cpp
server/server_frame/src/network/: Acceptor.cpp  Acceptor.h  CircuitQueue.h  Connector.cpp  Connector.h  IOCPServer.cpp  IoHandler.cpp  IoHandler.h  Message.h  Network.h  NetworkObject.cpp  RecvBuffer.h  SendBuffer.h  Session.cpp  Session.h  SessionList.cpp  SessionList.h  SessionPool.cpp  SessionPool.h  SocketOps.cpp  SocketOpt.h  TLock.cpp  TLock.h  tcp_callbacks.cpp  tcp_client.cc  tcp_conn.cc  tcp_connector.cpp  tcp_server.cc  ws_client.cpp
server/server_frame/src/network_asio/: tcp.cpp  tcp_callbacks.cpp  tcp_client.cc  tcp_conn.cc  tcp_server.cc
server/server_frame/src/packet/: inner_protobuf_pkg.cpp  protobuf_pkg.cpp
server/server_frame/src/redis/: redisclient.cpp
server/server_frame/src/redisclient/: redis_client_wrap.cpp
server/server_frame/src/string/: stringutility.cpp
server/server_frame/src/time/: cooling.cpp  time_function.cpp  timeutility.cpp
server/server_frame/src/utility/: basic_functions.cpp  cooling.cpp  event_processor.cpp  ipcutility.cpp  profile_manager.cpp  shm_buff_queue.cpp  string_functions.cpp  stringutility.cpp  time_function.cpp  timeutility.cpp
server/servers/center_server/src/: center_mgr.cpp  center_mgr.h  game_net_mgr.cpp  game_net_mgr.h  game_server.cpp  stdafx.h
server/servers/common/src/: center_client.cpp  center_client.h  common_logic.cpp  db_operator.h  (+20 more)
(+159 files in other folders)
