cmake_minimum_required(VERSION 3.0)
project(server)

set(CMAKE_CXX_STANDARD 11)

include_directories(server_frame/include)
include_directories(server_frame/include/aoi)
include_directories(server_frame/include/config)
include_directories(server_frame/include/crypt)
include_directories(server_frame/include/dbmysql)
include_directories(server_frame/include/framework)
include_directories(server_frame/include/fundamental)
include_directories(server_frame/include/helper)
include_directories(server_frame/include/lua)
include_directories(server_frame/include/lua_service)
include_directories(server_frame/include/math)
include_directories(server_frame/include/modern)
include_directories(server_frame/include/modern/nlohmann)
include_directories(server_frame/include/modern/sol)
include_directories(server_frame/include/modern/spdlog)
include_directories(server_frame/include/modern/spdlog/contrib)
include_directories(server_frame/include/modern/spdlog/contrib/sinks)
include_directories(server_frame/include/modern/spdlog/details)
include_directories(server_frame/include/modern/spdlog/fmt)
include_directories(server_frame/include/modern/spdlog/fmt/bundled)
include_directories(server_frame/include/modern/spdlog/sinks)
include_directories(server_frame/include/network)
include_directories(server_frame/include/packet)
include_directories(server_frame/include/redis)
include_directories(server_frame/include/utility)
include_directories(server_frame/include/zlib)
include_directories(server_frame/src/framework)
include_directories(server_frame/src/lua)
include_directories(server_frame/src/network)
include_directories(server_frame/src/zlib)
include_directories(servers/center_server/src)
include_directories(servers/common/src)
include_directories(servers/lobby_server/src)
include_directories(servers/pb/src)

add_executable(server
        server_frame/include/aoi/quad_tree.hpp
        server_frame/include/aoi/rect.hpp
        server_frame/include/aoi/scene.h
        server_frame/include/aoi/vec2.hpp
        server_frame/include/config/config.h
        server_frame/include/config/csvreader.h
        server_frame/include/crypt/aes.h
        server_frame/include/crypt/base64.hpp
        server_frame/include/crypt/blowfish.h
        server_frame/include/crypt/crypt.h
        server_frame/include/crypt/mars.h
        server_frame/include/crypt/md5.h
        server_frame/include/crypt/net_encrypt.h
        server_frame/include/crypt/serpent.h
        server_frame/include/crypt/sha1.h
        server_frame/include/crypt/url_encode.h
        server_frame/include/crypt/xor256.h
        server_frame/include/dbmysql/db_task.h
        server_frame/include/dbmysql/db_wrap.h
        server_frame/include/dbmysql/dbmysql.h
        server_frame/include/dbmysql/sql_join.h
        server_frame/include/framework/application.h
        server_frame/include/framework/cmdline.h
        server_frame/include/fundamental/common.h
        server_frame/include/fundamental/cyclebuffer.h
        server_frame/include/fundamental/cyclebuffer_shm.h
        server_frame/include/fundamental/hashtable.h
        server_frame/include/fundamental/hashval.h
        server_frame/include/fundamental/linkcache.h
        server_frame/include/fundamental/multiprocesshashtable.h
        server_frame/include/fundamental/ring_buff.h
        server_frame/include/fundamental/variablehashtable.h
        server_frame/include/fundamental/variablelengthhashtable.h
        server_frame/include/helper/bufferStream.h
        server_frame/include/helper/filehelper.h
        server_frame/include/helper/fileStream.h
        server_frame/include/helper/helper.h
        server_frame/include/helper/numberStream.h
        server_frame/include/helper/streamBase.h
        server_frame/include/helper/stringStream.h
        server_frame/include/lua/lauxlib.h
        server_frame/include/lua/lua.h
        server_frame/include/lua/lua.hpp
        server_frame/include/lua/luaconf.h
        server_frame/include/lua/lualib.h
        server_frame/include/lua_service/lua_service.h
        server_frame/include/math/box2.h
        server_frame/include/math/math_functions.h
        server_frame/include/math/point2.h
        server_frame/include/math/point3.h
        server_frame/include/math/rand_table.h
        server_frame/include/math/rank.h
        server_frame/include/math/rect.h
        server_frame/include/modern/nlohmann/json.hpp
        server_frame/include/modern/nlohmann/json_wrap.h
        server_frame/include/modern/sol/sol.hpp
        server_frame/include/modern/sol/sol_forward.hpp
        server_frame/include/modern/spdlog/contrib/sinks/step_file_sink.h
        server_frame/include/modern/spdlog/details/async_log_helper.h
        server_frame/include/modern/spdlog/details/async_logger_impl.h
        server_frame/include/modern/spdlog/details/file_helper.h
        server_frame/include/modern/spdlog/details/log_msg.h
        server_frame/include/modern/spdlog/details/logger_impl.h
        server_frame/include/modern/spdlog/details/mpmc_blocking_q.h
        server_frame/include/modern/spdlog/details/null_mutex.h
        server_frame/include/modern/spdlog/details/os.h
        server_frame/include/modern/spdlog/details/pattern_formatter_impl.h
        server_frame/include/modern/spdlog/details/registry.h
        server_frame/include/modern/spdlog/details/spdlog_impl.h
        server_frame/include/modern/spdlog/fmt/bundled/format.cc
        server_frame/include/modern/spdlog/fmt/bundled/format.h
        server_frame/include/modern/spdlog/fmt/bundled/ostream.cc
        server_frame/include/modern/spdlog/fmt/bundled/ostream.h
        server_frame/include/modern/spdlog/fmt/bundled/posix.cc
        server_frame/include/modern/spdlog/fmt/bundled/posix.h
        server_frame/include/modern/spdlog/fmt/bundled/printf.cc
        server_frame/include/modern/spdlog/fmt/bundled/printf.h
        server_frame/include/modern/spdlog/fmt/bundled/time.h
        server_frame/include/modern/spdlog/fmt/fmt.h
        server_frame/include/modern/spdlog/fmt/ostr.h
        server_frame/include/modern/spdlog/sinks/android_sink.h
        server_frame/include/modern/spdlog/sinks/ansicolor_sink.h
        server_frame/include/modern/spdlog/sinks/base_sink.h
        server_frame/include/modern/spdlog/sinks/dist_sink.h
        server_frame/include/modern/spdlog/sinks/file_sinks.h
        server_frame/include/modern/spdlog/sinks/msvc_sink.h
        server_frame/include/modern/spdlog/sinks/null_sink.h
        server_frame/include/modern/spdlog/sinks/ostream_sink.h
        server_frame/include/modern/spdlog/sinks/sink.h
        server_frame/include/modern/spdlog/sinks/stdout_sinks.h
        server_frame/include/modern/spdlog/sinks/syslog_sink.h
        server_frame/include/modern/spdlog/sinks/wincolor_sink.h
        server_frame/include/modern/spdlog/sinks/windebug_sink.h
        server_frame/include/modern/spdlog/async_logger.h
        server_frame/include/modern/spdlog/common.h
        server_frame/include/modern/spdlog/formatter.h
        server_frame/include/modern/spdlog/logger.h
        server_frame/include/modern/spdlog/spdlog.h
        server_frame/include/modern/spdlog/tweakme.h
        server_frame/include/modern/directory.hpp
        server_frame/include/modern/file.hpp
        server_frame/include/modern/httplib.h
        server_frame/include/modern/locked_queue.h
        server_frame/include/modern/read_write_lock.h
        server_frame/include/modern/thread_pool.h
        server_frame/include/modern/timer_wheel.h
        server_frame/include/modern/tinyxml2.h
        server_frame/include/network/IOCPServer.h
        server_frame/include/network/NetworkObject.h
        server_frame/include/network/tcp_connector.h
        server_frame/include/packet/inner_protobuf_pkg.h
        server_frame/include/packet/protobuf_handle.h
        server_frame/include/packet/protobuf_pkg.h
        server_frame/include/utility/basic_functions.h
        server_frame/include/utility/basic_types.h
        server_frame/include/utility/comm_macro.h
        server_frame/include/utility/cooling.h
        server_frame/include/utility/ipcutility.h
        server_frame/include/utility/object_pool.hpp
        server_frame/include/utility/singleton.h
        server_frame/include/utility/string_functions.h
        server_frame/include/utility/stringutility.h
        server_frame/include/utility/time_function.h
        server_frame/include/utility/timeutility.h
        server_frame/include/zlib/zconf.h
        server_frame/include/zlib/zlib.h
        server_frame/include/svrlib.h
        server_frame/src/config/config.cpp
        server_frame/src/config/csvreader.cpp
        server_frame/src/crypt/aes.cpp
        server_frame/src/crypt/blowFish.cpp
        server_frame/src/crypt/crypt.cpp
        server_frame/src/crypt/mars.cpp
        server_frame/src/crypt/md5.cpp
        server_frame/src/crypt/net_encrypt.cpp
        server_frame/src/crypt/serpent.cpp
        server_frame/src/crypt/sha1.cc
        server_frame/src/crypt/url_encode.cpp
        server_frame/src/dbmysql/db_task.cpp
        server_frame/src/dbmysql/db_wrap.cpp
        server_frame/src/dbmysql/dbmysql.cpp
        server_frame/src/dbmysql/dbmysql_exception.cpp
        server_frame/src/dbmysql/dbmysql_result.cpp
        server_frame/src/dbmysql/dbmysql_statement.cpp
        server_frame/src/dbmysql/dbmysql_transaction.cpp
        server_frame/src/dbmysql/test_client.cpp
        server_frame/src/framework/exception.cpp
        server_frame/src/framework/framework.cpp
        server_frame/src/framework/framework.h
        server_frame/src/framework/frameworkmain.cpp
        server_frame/src/helper/bufferStream.cpp
        server_frame/src/helper/filehelper.cpp
        server_frame/src/helper/fileStream.cpp
        server_frame/src/helper/helper.cpp
        server_frame/src/helper/streamBase.cpp
        server_frame/src/helper/stringStream.cpp
        server_frame/src/lua/lapi.c
        server_frame/src/lua/lapi.h
        server_frame/src/lua/lauxlib.c
        server_frame/src/lua/lbaselib.c
        server_frame/src/lua/lbitlib.c
        server_frame/src/lua/lcode.c
        server_frame/src/lua/lcode.h
        server_frame/src/lua/lcorolib.c
        server_frame/src/lua/lctype.c
        server_frame/src/lua/lctype.h
        server_frame/src/lua/ldblib.c
        server_frame/src/lua/ldebug.c
        server_frame/src/lua/ldebug.h
        server_frame/src/lua/ldo.c
        server_frame/src/lua/ldo.h
        server_frame/src/lua/ldump.c
        server_frame/src/lua/lfunc.c
        server_frame/src/lua/lfunc.h
        server_frame/src/lua/lgc.c
        server_frame/src/lua/lgc.h
        server_frame/src/lua/linit.c
        server_frame/src/lua/liolib.c
        server_frame/src/lua/llex.c
        server_frame/src/lua/llex.h
        server_frame/src/lua/llimits.h
        server_frame/src/lua/lmathlib.c
        server_frame/src/lua/lmem.c
        server_frame/src/lua/lmem.h
        server_frame/src/lua/loadlib.c
        server_frame/src/lua/lobject.c
        server_frame/src/lua/lobject.h
        server_frame/src/lua/lopcodes.c
        server_frame/src/lua/lopcodes.h
        server_frame/src/lua/loslib.c
        server_frame/src/lua/lparser.c
        server_frame/src/lua/lparser.h
        server_frame/src/lua/lprefix.h
        server_frame/src/lua/lstate.c
        server_frame/src/lua/lstate.h
        server_frame/src/lua/lstring.c
        server_frame/src/lua/lstring.h
        server_frame/src/lua/lstrlib.c
        server_frame/src/lua/ltable.c
        server_frame/src/lua/ltable.h
        server_frame/src/lua/ltablib.c
        server_frame/src/lua/ltm.c
        server_frame/src/lua/ltm.h
        server_frame/src/lua/lua.c
        server_frame/src/lua/luac.c
        server_frame/src/lua/lundump.c
        server_frame/src/lua/lundump.h
        server_frame/src/lua/lutf8lib.c
        server_frame/src/lua/lvm.c
        server_frame/src/lua/lvm.h
        server_frame/src/lua/lzio.c
        server_frame/src/lua/lzio.h
        server_frame/src/lua_service/lua_service.cpp
        server_frame/src/math/math_functions.cpp
        server_frame/src/math/rand_table.cpp
        server_frame/src/modern/json_wrap.cpp
        server_frame/src/modern/tinyxml2.cpp
        server_frame/src/network/Acceptor.cpp
        server_frame/src/network/Acceptor.h
        server_frame/src/network/CircuitQueue.h
        server_frame/src/network/Connector.cpp
        server_frame/src/network/Connector.h
        server_frame/src/network/Double_List_T.h
        server_frame/src/network/IOCPServer.cpp
        server_frame/src/network/IoHandler.cpp
        server_frame/src/network/IoHandler.h
        server_frame/src/network/Message.h
        server_frame/src/network/Network.h
        server_frame/src/network/NetworkObject.cpp
        server_frame/src/network/RecvBuffer.h
        server_frame/src/network/SendBuffer.h
        server_frame/src/network/Session.cpp
        server_frame/src/network/Session.h
        server_frame/src/network/SessionList.cpp
        server_frame/src/network/SessionList.h
        server_frame/src/network/SessionPool.cpp
        server_frame/src/network/SessionPool.h
        server_frame/src/network/Single_List_T.h
        server_frame/src/network/SocketOps.cpp
        server_frame/src/network/SocketOpt.h
        server_frame/src/network/tcp_connector.cpp
        server_frame/src/network/TLock.cpp
        server_frame/src/network/TLock.h
        server_frame/src/packet/inner_protobuf_pkg.cpp
        server_frame/src/packet/protobuf_pkg.cpp
        server_frame/src/utility/basic_functions.cpp
        server_frame/src/utility/cooling.cpp
        server_frame/src/utility/ipcutility.cpp
        server_frame/src/utility/string_functions.cpp
        server_frame/src/utility/stringutility.cpp
        server_frame/src/utility/time_function.cpp
        server_frame/src/utility/timeutility.cpp
        server_frame/src/zlib/adler32.c
        server_frame/src/zlib/compress.c
        server_frame/src/zlib/crc32.c
        server_frame/src/zlib/crc32.h
        server_frame/src/zlib/deflate.c
        server_frame/src/zlib/deflate.h
        server_frame/src/zlib/gzclose.c
        server_frame/src/zlib/gzguts.h
        server_frame/src/zlib/gzlib.c
        server_frame/src/zlib/gzread.c
        server_frame/src/zlib/gzwrite.c
        server_frame/src/zlib/infback.c
        server_frame/src/zlib/inffast.c
        server_frame/src/zlib/inffast.h
        server_frame/src/zlib/inffixed.h
        server_frame/src/zlib/inflate.c
        server_frame/src/zlib/inflate.h
        server_frame/src/zlib/inftrees.c
        server_frame/src/zlib/inftrees.h
        server_frame/src/zlib/trees.c
        server_frame/src/zlib/trees.h
        server_frame/src/zlib/uncompr.c
        server_frame/src/zlib/zutil.c
        server_frame/src/zlib/zutil.h
        servers/center_server/src/center_mgr.cpp
        servers/center_server/src/center_mgr.h
        servers/center_server/src/game_net_mgr.cpp
        servers/center_server/src/game_net_mgr.h
        servers/center_server/src/game_server.cpp
        servers/center_server/src/stdafx.h
        servers/common/src/center_client.cpp
        servers/common/src/center_client.h
        servers/common/src/common_logic.cpp
        servers/common/src/common_logic.h
        servers/common/src/data_cfg_mgr.cpp
        servers/common/src/data_cfg_mgr.h
        servers/common/src/db_operator.cpp
        servers/common/src/db_operator.h
        servers/common/src/db_struct_define.h
        servers/common/src/dbmysql_mgr.cpp
        servers/common/src/dbmysql_mgr.h
        servers/common/src/game_define.h
        servers/common/src/game_server_config.cpp
        servers/common/src/game_server_config.h
        servers/common/src/player_base.cpp
        servers/common/src/player_base.h
        servers/common/src/player_cache_mgr.cpp
        servers/common/src/player_cache_mgr.h
        servers/common/src/player_mgr.cpp
        servers/common/src/player_mgr.h
        servers/common/src/redis_mgr.cpp
        servers/common/src/redis_mgr.h
        servers/lobby_server/src/game_net_mgr.cpp
        servers/lobby_server/src/game_net_mgr.h
        servers/lobby_server/src/game_server.cpp
        servers/lobby_server/src/gobal_event_mgr.cpp
        servers/lobby_server/src/gobal_event_mgr.h
        servers/lobby_server/src/lua_logic.cpp
        servers/lobby_server/src/lua_logic.h
        servers/lobby_server/src/msg_client_handle.cpp
        servers/lobby_server/src/msg_client_handle.h
        servers/lobby_server/src/player.cpp
        servers/lobby_server/src/player.h
        servers/lobby_server/src/stdafx.h
        servers/pb/src/base_msg_struct.pb.cc
        servers/pb/src/base_msg_struct.pb.h
        servers/pb/src/client_logic_msg.pb.cc
        servers/pb/src/client_logic_msg.pb.h
        servers/pb/src/error_code.pb.cc
        servers/pb/src/error_code.pb.h
        servers/pb/src/msg_define.pb.cc
        servers/pb/src/msg_define.pb.h
        servers/pb/src/servers_msg.pb.cc
        servers/pb/src/servers_msg.pb.h)
